--- a/platforms/android/assets/www/templates/Esellerhome.html
+++ b/platforms/android/assets/www/templates/Esellerhome.html
@@ -4,7 +4,7 @@
       </ion-nav-back-button>
       </ion-nav-bar>
   		<ion-content class="padding">
-
+    <div id="loader" style="display:none;"></div>
       <h1>Add Fish Products from below List</h1>
       <div class="row">
       <div class="col">
@@ -36,7 +36,7 @@
     
     </div>
     <div class="col">
-          <input type="number" style="border: 3px solid rgb(171, 239, 171);" ng-model="choice.price" placeholder="Enter fish Price">
+          <input type="number" style="border: 3px solid rgb(171, 239, 171); size: 30%" ng-model="choice.price" placeholder="Enter fish Price">
      
     </div>
     <div class="col">
