--- a/platforms/android/assets/www/templates/home.html
+++ b/platforms/android/assets/www/templates/home.html
@@ -7,7 +7,7 @@
       <button class="button icon button-clear ion-navicon-round"  ng-click="toggleLeft()"></button>
       <ngcart-summary  font-size: 15px;font-weight: bold;"></ngcart-summary>
       <br></br>
-       <button class="button icon button-clear ion-bag"ng-click="shoppingbag()" > 
+       <button class="button icon button-clear ion-bag" ng-click="shoppingbag()" > 
       </button> 
    </div>
   </ion-header-bar>
@@ -38,9 +38,10 @@
          <img src="img\img_fjords_wide.jpg" style="width: 100%;height: 100%"  > </span>
          </ion-slide>
          </ion-slide-box>
-    
+
+          
          <div  ng-repeat="products in product | filter:searchitem"  >
-          <div class="card" style="width: 90%;height: 50%">
+          <div class="card" style="width: 300px;">
               <img src="{{products.productImage}}" alt="Avatar" style="width : 100% ; height : 100% " >
               <div class="container">
               <p style="font-size: 35px; font-family: arial;font-weight: bold;">Name: {{products.productname}}</p>
@@ -175,16 +176,16 @@
 <ion-side-menu side="left">
 
   <ul class="list">
-          <div class="item item-avatar" style="size: 1200px">
+          <div class="item item-avatar" style="size: 1200px" ng-click="editProfile()">
             <img src="img/fisher.png"> 
+          
             <h2>Welcome Jarr!!</h2>
             <p>Your Profile</p>
           </div>
           <a href="#/event/check-in" class="item icon-left ion-home" menu-close> Home</a>
           <a href="" class="item icon ion-person-stalker" ng-click="sideAcctSett()"> Account Settings</a>
-          <a href="" class="item icon ion-gear-b" ng-click="sideAcctSett()" menu-close> Privacy Settings</a>
-
           <a href="#/event/prices" class="item icon ion-clock" ng-click="orderhistory()"> Orders History</a>
+          <a href="" class="item ion-arrow-swap" ng-click="loginEsseler()"> Swich To Customer</a>
           <a href="#/event/prices" class="item icon ion-social-usd" menu-close> My Payments</a>
           <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="logout()">Log out</a> 
   </ul>
