--- a/platforms/android/assets/www/templates/signup.html
+++ b/platforms/android/assets/www/templates/signup.html
@@ -1,58 +1,47 @@
-<ion-view view-title="SignUp" name="SignUp-view" style="background-color: #458BA6 !important">
+<ion-view view-title="SignUp" name="SignUp-view" style="background-color: #458D7B !important">
 <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-      </ion-nav-bar>
+    <ion-nav-back-button>
+  </ion-nav-back-button>
+        </ion-nav-bar>
   <ion-content class="padding">
-       <div class="list list-inset">
-       <label class="item item-input">
-              <input type="text" placeholder="Please Enter a username" ng-model="data.username">
+
+  <div class="list">
+  <label class="item item-input item-floating-label">
+    <span class="input-label">Username</span>
+    <input type="text" placeholder="Username" ng-model="signup.username">
+  </label>
+  <label class="item item-input item-floating-label">
+    <span class="input-label">Email</span>
+    <input type="text" placeholder="Email" ng-model="signup.email">
+  </label>
+  <label class="item item-input item-floating-label">
+    <span class="input-label">Mobile Number</span>
+    <input type="text" placeholder="Mobile Number" ng-model="signup.phoneno">
+  </label>
+    <label class="item item-input item-floating-label">
+    <span class="input-label">Passsword</span>
+    <input type="password" placeholder="Create a Password" ng-model="signup.password">
+  </label>
+          <label class="item item-input item-floating-label">
+              <input type="text" placeholder="Customer Type " ng-model="signup.type">
+              <select>
+              <option value="esseler">E-Seller</option>
+              <option value="vendor">Vendor</option>
+              <option value="buyer">Direct Buyer</option>
+              </select> 
           </label>
-          <label class="item item-input">
-              <input type="text" placeholder="Please Enter Your Email Address" ng-model="data.Email">
-          </label>
-
-          <h5 style="text-align: center">--------------------   OR    ------------------------</h5>
-
-          <label class="item item-input">
-              <input type="text" placeholder="Plaese Enter Your Phone No" ng-model="data.password">
-          </label>
-
-      
-      <label class="item item-input">
-        
-        <option value="">Select a Country --</option>
-
-          <country-select ng-model="country" ng-options="country.code as country.name for country in countries">
-                          </country-select>
+      <label class="checkbox">
+         <input type="checkbox" placeholder="Customer Type" ng-model="signup.value">
+      I’d like to receive coupons, promotions, surveys, and updates via email about Fisher App and its partners.
       </label>
-            
-          
-      <label class="item item-input">
-              <input type="text" placeholder="Please Select Your State" ng-model="data.state">
-          </label>
-
-
-          <label class="item qitem-input">
-              <input type="text" placeholder="Please Select Your City" ng-model="data.state">
-          </label>
-
-          <label class="item qitem-input">
-              <input type="text" placeholder="Customer Type " ng-model="data.type">
-
-  <select>
-  <option value="esseler">E-Seller</option>
-  <option value="vendor">Vendor</option>
-  <option value="buyer">Direct Buyer</option>
-  
-</select>
-          </label>
-
-
 
 
       </div>
-      <button class="button button-block button-dark" ng-click="Recover()">Submit</button>
+      <button class="button button-block button-dark" ng-click="Signup()">Submit</button>
      
   </ion-content>
+
+
 </ion-view>
+
+
