--- a/www/templates/cart.html
+++ b/www/templates/cart.html
@@ -10,11 +10,8 @@
   
     
 
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-12">
-        
-    
-        
         
         <div class="row">
    
@@ -22,7 +19,7 @@
         
         <ngcart-checkout service="paypal" settings="payPalSettings"></ngcart-checkout>
     </div>
-</div>
+</div> -->
         
 
 
@@ -37,8 +34,8 @@
 
 <style>
 table, td, th {    
-    border: 1px solid #ddd;
-    text-align: left;
+    border: 2px solid #ddd;
+    text-align: center;
 }
 
 table {
@@ -47,7 +44,7 @@ table {
 }
 
 th, td {
-    padding: 15px;
+    padding: 5px;
 }
 </style>
 
@@ -64,10 +61,10 @@ th, td {
     
         <tr>
             <th></th>
-            <th style="font-size: 24px;font-weight:bold; padding-left: 30px;">Item name</th>
-            <th style="font-size: 24px;font-weight:bold;padding-left: 30px;">Quantity </th>
-            <th style="font-size: 24px;font-weight:bold;padding-left: 30px;">Item Price</th>
-            <th style="font-size: 24px;font-weight:bold;padding-left: 30px;">Amount</th>
+            <th style="font-weight:bold;">Item name</th>
+            <th style="font-weight:bold;">Quantity </th>
+            <th style="font-weight:bold;">Item Price</th>
+            <th style="font-weight:bold;">Amount</th>
     
         </tr>
         
@@ -76,38 +73,38 @@ th, td {
         
         <tbody>
         <tr ng-repeat="item in ngCart.getCart().items track by $index">
-            <td style="font-size: 24px;padding-left: 30px;"><ion-icon ng-click="ngCart.removeItemById(item.getId())" class=" ion-close-round"></ion-icon></td>
+            <td ><ion-icon style="font-weight: bolder;" ng-click="ngCart.removeItemById(item.getId())" class=" ion-close-round"></ion-icon></td>
 
-            <td style="font-size: 24px;padding-left: 30px;">{{ item.getId() }}</td>
-            <td style="font-size: 24px;padding-left: 30px;"><ion-icon class="ion-minus-round" ng-class="{'disabled':item.getQuantity()==1}"
+            <td >{{ item.getId() }}</td>
+            <td  ><ion-icon style="font-weight: bolder;" class="ion-minus-round" ng-class="{'disabled':item.getQuantity()==1}"
                       ng-click="item.setQuantity(-1, true)"></ion-icon>&nbsp;&nbsp;
                 {{ item.getQuantity() | number }}&nbsp;&nbsp;
-                <ion-icon class="ion-plus-round" ng-click="item.setQuantity(1, true)"></ion-icon></td>
-            <td style="font-size: 24px;padding-left: 30px;">{{ item.getPrice() | currency}}</td>
-            <td style="font-size: 24px;padding-left: 30px;">{{ item.getTotal() | currency }}</td>
+                <ion-icon style="font-weight: bolder;"  class="ion-plus-round" ng-click="item.setQuantity(1, true)"></ion-icon></td>
+            <td >{{ item.getPrice() | currency}}</td>
+            <td >{{ item.getTotal() | currency }}</td>
             <hr>
         </tr>
 
-                <tr ng-show="ngCart.getTax()">
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;padding-left: 30px;">Tax:</td>
-            <td style="font-size: 24px;padding-left: 30px;">{{ ngCart.getTax() | currency }}</td>
+         <tr ng-show="ngCart.getTax()">
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td >Tax:</td>
+            <td >{{ ngCart.getTax() | currency }}</td>
         </tr>
         <tr ng-show="ngCart.getShipping()">
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;font-weight:bold;padding-left: 30px;">Shipping:</td>
-            <td style="font-size: 24px;padding-left: 30px;">{{ ngCart.getShipping() | currency }}</td>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td >Shipping:</td>
+            <td >{{ ngCart.getShipping() | currency }}</td>
         </tr>
                 <tr>
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;padding-left: 30px;" ></td>
-            <td style="font-size: 24px;padding-left: 30px;"></td>
-            <td style="font-size: 24px;font-weight:bold;padding-left: 30px;"> Total:</td>
-            <td style="font-size: 24px;padding-left: 30px;">{{ ngCart.totalCost() | currency }}</td>
+            <td ></td>
+            <td ></td>
+            <td ></td>
+            <td > Total:</td>
+            <td >{{ ngCart.totalCost() | currency }}</td>
         </tr>
  
 
