--- a/www/templates/forgot.html
+++ b/www/templates/forgot.html
@@ -9,7 +9,7 @@
      <div class="list list-inset">
          
           <label class="item item-input">
-              <input type="email" placeholder="Enter Your Email Address or Mobile Number" ng-model="data.email">
+              <input type="email" placeholder="Enter Your Email Address or Mobile Number" ng-model="recover.email">
           </label>
       </div>
       <button class="button button-block button-calm" ng-click="Recover()">Recover</button>
