--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,6 +5,7 @@
 
       <div class="list list-inset">
           <img src="img/logo.jpg" style="width: 20%;height: 10%">
+          
           <label class="item item-input">
               <input type="text" placeholder="username or mobile number" ng-model="data.username">
           </label>
@@ -13,15 +14,20 @@
           </label>
       </div>
        
+       
+
 
       <button class="button button-block button-dark" ng-click="loginSubmit()">Login</button>
-       <button class="button button-block button-dark" ng-click="signup()">Sign Up with Email Address</button>
+      <button class="button button-block button-dark" ng-click="signup()">Sign Up with Email Address</button>
        <button class="button button-block button-positive" ng-click="loginEsseler()">Continue with Facebook</button>
       <button class="button button-block button-assertive " ng-click="GoogleLogin()">Continue with Google+</button>
       <button class="button button button-energized" ng-click="forgotpassword()">Forgot Your Password??</button>
       <h3>By signing up, I agree to Fisher Conn’s Terms of Service, Nondiscrimination Policy, Payments Terms of Service, Privacy Policy, E-seller Refund Policy, and Vendor Guarantee Terms.  </h3>
 
       </ion-content>
+
 </ion-view>
+
+<div id="loader" style="display:none;"></div>
 
 
